--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
-.banner img{
-    display: inline-block;
+* {
+    background-color: lightpink;
+}
+
+.banner,
+img {
+    padding: 10px;
+    display: inline-flex;
+    margin: 0 auto;
     vertical-align: middle;
     width: 300px;
     height: auto;
@@ -7,24 +14,45 @@
 
 
 h1 {
-    color: goldenrod;
-    background-color: rgba(100,150,255,0.75);
+    color: rgb(243, 74, 100);
+    background-color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
 
 }
 
+ul {
+    padding: 0 50px;
+    margin: 0 auto;
+    display: inline-block;   
+}
+
 .list-items {
+    padding: 10px;
+    margin: 0 auto;
+    text-align: center;
     font-size: 24px;
     font-family: Arial, Helvetica, sans-serif;
-    color: goldenrod;
 }
 
 #item1,
 #item3 {
-    background-color: rgba(100,150,255,0.75);
+    padding: 10px;
+    border-bottom: 1px solid black;
+    margin: 0 auto;
+    display: block;
+    background-color: rgb(243, 74, 100);
 }
 
 #item2 {
-    background-color: goldenrod;
+    padding: 10px;
+    border-bottom: 1px solid black;
+    margin: 0 auto;
+    display: block;
+    background-color: white;
+}
+
+button {
+    padding: 10px;
+    font-size: 24px;
 }
