--- a/style.css
+++ b/style.css
@@ -6,14 +6,22 @@ img {
     padding: 10px;
     display: inline;
     margin: 0 auto;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
     vertical-align: middle;
     max-width: 300px;
     height: auto;
+    background-color: antiquewhite;
 }
 
 a {
     margin: 0 auto;
     display: block; 
+    background-color: antiquewhite;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
 }
 
 h1 {
@@ -28,7 +36,7 @@ h1 {
 ul {
     padding: 0 50px;
     margin: 0 auto;
-    display: inline;
+    display: inline-flex;
     vertical-align: middle;
    
 }
@@ -36,31 +44,17 @@ ul {
 .items {
     padding: 10px;
     margin: 0 auto;
-    display: inline;
+    display: flex;
     text-align: center;
     font-size: 24px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#item1,
-#item3 {
-    padding: 10px;
-    border-bottom: 1px solid black;
-    margin: 0 auto;
-    display: block;
-    background-color: rgb(243, 74, 100);
-}
 
-#item2 {
-    padding: 10px;
-    border-bottom: 1px solid black;
-    margin: 0 auto;
-    display: block;
-    background-color: white;
-}
 
 button {
     padding: 10px;
+    background-color: rgb(243, 74, 100);
     font-size: 24px;
     box-shadow: 5px 5px rgba(80, 27, 35, 75);
 }
